Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-40366

[Magma] Backfill of expiration can result in non-zero body due to incorrect compresion

    XMLWordPrintable

Details

    Description

      Steps:

      1. Create a 2 node(.37, .39) cluster
      2. Create the magma bucket with 1 replica
      3. Start a data load with Durability=PERSIST_TO_MAJORITY and 60s expiry for every item
      4. After 120s, rebalance in 1 node(.40). Rebalance succeeds
      5. 20 times, periodically kill memcached on all nodes with a random time between 60-120s.
      6. Rebalance out .39 and it fails.

      guides/gradlew --refresh-dependencies testrunner -P jython=/opt/jython/bin/jython -P 'args=-i /tmp/dp_magma_job.ini -p bucket_storage=magma,bucket_eviction_policy=fullEviction,rerun=False -t volumetests.Magma.volume.SystemTestMagma,nodes_init=2,replicas=1,skip_cleanup=True,num_items=500000000,num_buckets=1,bucket_names=GleamBook,doc_size=4096,bucket_type=membase,compression_mode=off,iterations=1,batch_size=1000,sdk_timeout=60,log_level=debug,infra_log_level=debug,rerun=False,skip_cleanup=True,key_size=18,randomize_doc_size=False,randomize_value=True,assert_crashes_on_load=True,maxttl=60,num_collections=0,durability=PERSIST_TO_MAJORITY -m rest'
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              drigby Dave Rigby (Inactive)
              ritesh.agarwal Ritesh Agarwal
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty