MB-40366: MagmaKVStore::scan: Don't forcefully compress values

When performing a disk scan using Magma, don't forcefully compress
Items if there is no space-saving to be made.

Change-Id: I9f4f128a571830ccab5f7a5f98367cadec347520
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/132372
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Ben Huddleston <ben.huddleston@couchbase.com>